_sass/sections/nav/_desk-nav.scss
.brand-logo {
  font-family: 'Open Sans', sans-serif;

  .night & {
    color: $night_colour-brand-logo;
  }
}

.dropdown-content {
  &.active li > a.active {
    color: $nav-active-colour-day !important;

    .night & {
      color: $night_colour-nav-a-dropdown--active !important;
    }
  }

  & li > a:hover {
    background-color: rgba(0,0,0,0.1);
  }

  .night & {
    background-color: $night_colour-nav-dropdown-bg;
  }

  li > a, li > span {
    //color: $nav-active-colour-day;
    //color: #050709;
    color: $night_colour-nav-dropdown-a;
  }

}


.nav-wrapper {
  .night & {
    background-color: $night_colour-nav-bg !important;
  }
}

nav {
  li > a {
    //letter-spacing: .08em;

    &.active {
      color: $nav-active-colour-day;

      .night & {
        color: $night_colour-nav-a--active !important;
      }

      .night &:hover {
        //color: $night_colour-text-link--visted !important;
        background-color: rgba(0,0,0,0.1);
      }
    }

  }

  // .brand-logo {
  //  padding-left: 1%;
  //  color: #050709;
  //  font-weight: 600;
  // }

  ul a {
    //color: $nav-ul-a-colour-day;

    .night & {
      color: $night_colour-nav-a;
    }

    .night &:hover {

      background-color: $anti-flash-white;//rgba(234, 234, 234, 0.9);
      color: $jet--dark;
      }
  }

}

.nav-up { top: -70px; }

.navbar-fixed { transition: top 0.2s ease-in-out; }

